force-app/main/default/objects/Forecast_Snapshot_Sales__c/Forecast_Snapshot_Sales__c.object-meta.xml
<CustomObject>
    <description>Object to capture the analytic snapshots with focus on sales.</description>
    <label>Forecast Snapshot Sales</label>
    <nameField>
        <label>Forecast Snapshot Sales Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forecast Snapshot Sales</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>