force-app/main/default/objects/Forecast_Snapshot_Sales__c/fields/Channel_Manager__c.field-meta.xml
<CustomField>
    <fullName>Channel_Manager__c</fullName>
    <label>Channel Manager</label>
    <length>30</length>
    <type>Text</type>
</CustomField>