force-app/main/default/objects/Forecast_Snapshot_Sales__c/fields/Forecast_2__c.field-meta.xml
<CustomField>
    <fullName>Forecast_2__c</fullName>
    <label>Forecast 2</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>