force-app/main/default/objects/Forecast_Snapshot_Sales__c/fields/Forecast__c.field-meta.xml
<CustomField>
    <fullName>Forecast__c</fullName>
    <label>Forecast</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>