force-app/main/default/objects/Forecast_Snapshot_Sales__c/fields/Forecast_Sales_CHF__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Sales_CHF__c</fullName>
    <label>Forecast Sales CHF</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>