force-app/main/default/objects/Forecast_Snapshot_Sales__c/fields/Forecast_Sales_Optimum__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Sales_Optimum__c</fullName>
    <label>Forecast Sales Optimum</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>