force-app/main/default/objects/Forecast_Snapshot_Sales__c/fields/Order_Book__c.field-meta.xml
<CustomField>
    <fullName>Order_Book__c</fullName>
    <label>Order Book</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>