force-app/main/default/objects/Forecast_Snapshot_Sales__c/fields/Reporting_Area__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Area__c</fullName>
    <label>Reporting Area</label>
    <length>30</length>
    <type>Text</type>
</CustomField>