force-app/main/default/objects/Forecast_Snapshot_Sales__c/fields/Reporting_Region__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Region__c</fullName>
    <formula>IF(Contains(&quot;JP:KR:TW:CN:HK:TW:AU:IN:NZ:SG:TH:Rest of Asia&quot;, Reporting_Area__c ),&quot;APAC&quot;,
IF(Contains(&quot;AR:BR:CA:CL:MX:US:UY:Rest of Americas&quot;, Reporting_Area__c ),&quot;Americas&quot;,
IF(Contains(&quot;AT:Benelux:CH:DE:Eastern Europe:ES:FR:IL:IT:Nordic:Rest of EMEA:TR:UK:ZA&quot;, Reporting_Area__c ),&quot;EMEA&quot;,
&quot;HQ&quot;
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Region</label>
    <type>Text</type>
</CustomField>