force-app/main/default/objects/Forecast_Snapshot_Sales__c/fields/Reporting_uB_Office__c.field-meta.xml
<CustomField>
    <fullName>Reporting_uB_Office__c</fullName>
    <formula>Case(Reporting_Area__c ,
&quot;JP&quot;,&quot;Japan&quot;,
&quot;KR&quot;,&quot;Korea&quot;,
&quot;TW&quot;,&quot;Taiwan&quot;,
&quot;CN&quot;,&quot;China&quot;,
&quot;HK&quot;,&quot;China&quot;,
&quot;TW&quot;,&quot;Taiwan&quot;,

IF(Contains(&quot;AU:IN:NZ:SG:TH:Rest of Asia&quot;, Reporting_Area__c  ),&quot;Rest of APAC&quot;,
IF(Contains(&quot;AR:BR:CA:CL:MX:US:UY:Rest of Americas&quot;, Reporting_Area__c  ),&quot;Americas&quot;,
IF(Contains(&quot;AT:Benelux:CH:DE:Eastern Europe:ES:FR:IL:IT:Nordic:Rest of EMEA:TR:UK:ZA&quot;, Reporting_Area__c  ),&quot;EMEA&quot;,
&quot;HQ&quot;
))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting uB Office</label>
    <type>Text</type>
</CustomField>